--- a/Digital Notice Board - React/package.json
+++ b/Digital Notice Board - React/package.json
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
+    "react-router-dom": "^7.13.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
