--- a/Digital Notice Board - React/vercel.json
+++ b/Digital Notice Board - React/vercel.json
@@ -1,11 +1,11 @@
 {
-    "buildCommand": "cd digital-notice-board && npm install && npm run build",
-    "outputDirectory": "dist/public",
-    "framework": "vite",
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
+  "buildCommand": "cd \"Digital Notice Board - react\" && npm install && npm run build",
+  "outputDirectory": "dist/public",
+  "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
