--- a/digital-notice-board/vercel.json
+++ b/digital-notice-board/vercel.json
@@ -1,11 +1,11 @@
+
+
 {
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+    "routes": [
+        {
+            "src": "/[^.]+",
+            "dest": "/index.html",
+            "status": 200
+        }
+    ]
 }
