--- a/digital-notice-board/package.json
+++ b/digital-notice-board/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rest-express",
+  "name": "digital-notice-board",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
     "dev:client": "vite dev --port 5000",
-    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
+    "dev": "vite",
     "build": "vite build",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
